Added email to HP

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
                     
                     <h1 class="promo-text">Site em construção...</h1>
+		    <h1 class="promo-text">info@fisiosintra.pt</h1>
                     
                     <div class="CTA text-center">
                         <h1 class="client-name"></h1>
